# lift-tools-framework

./: .dockerignore  .gitignore  Dockerfile  README.md  build-example-binaries.sh  flake.nix  lift-tools-framework.cabal
.github/workflows/: tests.yml
example/: Main.hs  RunPerFileMain.hs  RunProcessMain.hs
src/Lift/: ToolIntegration.hs
src/Lift/ToolIntegration/: Applicable.hs  Cli.hs  Log.hs  Project.hs  Regex.hs  Run.hs  ToolResults.hs
src/Lift/ToolIntegration/Applicable/: Regex.hs
test/: Spec.hs
test/Lift/: ToolIntegrationSpec.hs
test/Lift/ToolIntegration/: ApplicableSpec.hs  ProjectSpec.hs  RunSpec.hs
test/Mock/: Project.hs
