cabal-version:      2.4
name:               lift-tools-framework
version:            0.1.0.0

synopsis: A framework for building tool integrations with Sonatype Lift
-- A longer description of the package.
-- description:
-- category:

bug-reports: https://github.com/amy-keibler/lift-tools-framework

author: Amy Keibler
maintainer: amelia.keibler@gmail.com
copyright: (c) 2021 Amy Keibler
license: Apache-2.0 OR MIT
license-files: LICENSE-APACHE
             , LICENSE-MIT
extra-source-files: README.md
library
    exposed-modules:    Lift.ToolIntegration
                        Lift.ToolIntegration.Applicable
                        Lift.ToolIntegration.Cli
                        Lift.ToolIntegration.Log
                        Lift.ToolIntegration.Project
                        Lift.ToolIntegration.Regex
                        Lift.ToolIntegration.Run
                        Lift.ToolIntegration.ToolResults
    build-depends:      base >=4.12.0.0 && < 4.15
                      , relude >= 1.0.0 && < 1.1
                      , aeson >= 1.5.6 && < 1.6
                      , directory >= 1.3.6 && < 1.4
                      , fast-logger >= 3.0.5 && < 3.1
                      , filepath >= 1.4.2 && < 1.5 
                      , HMock >= 0.3.0 && < 0.4
                      , optparse-applicative >= 0.16.1 && < 0.17
                      , regex >= 1.1.0 && < 1.2
                      , typed-process >= 0.2.6 && < 0.3
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Werror -rtsopts
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings

test-suite lift-tools-framework-tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:      Lift.ToolIntegrationSpec
                        Lift.ToolIntegration.ApplicableSpec
                        Lift.ToolIntegration.ProjectSpec
                        Lift.ToolIntegration.RunSpec
                        Mock.Project
    build-depends:      base >= 4.12.0.0 && < 4.15
                      , lift-tools-framework
                      , relude >= 1.0.0 && < 1.1
                      , aeson >= 1.5.6 && < 1.6
                      , directory >= 1.3.6 && < 1.4
                      , HMock
                      , hspec
                      , temporary
                      , raw-strings-qq
                      , regex >= 1.1.0 && < 1.2
    hs-source-dirs:     test
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Werror -rtsopts
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings


executable example-run-process
    main-is:            RunProcessMain.hs
    build-depends:      base >= 4.12.0.0 && < 4.15
                      , lift-tools-framework
                      , relude >= 1.0.0 && < 1.1
                      , aeson >= 1.5.6 && < 1.6
    hs-source-dirs:     example
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Werror -rtsopts
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings

executable example-run-per-file
    main-is:            RunPerFileMain.hs
    build-depends:      base >= 4.12.0.0 && < 4.15
                      , lift-tools-framework
                      , relude >= 1.0.0 && < 1.1
                      , hadolint >= 2.7.0 && < 2.8
                      , language-docker >= 10.1.0 && < 10.2
                      , megaparsec >= 9.1.0 && < 9.2
    hs-source-dirs:     example
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Werror -rtsopts
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
